[package]
authors = ['Reshetov Denis, reshetovdenis@gmail.com']
description = 'FRAME pallet for managing insurance.'
edition = '2018'
homepage = 'https://www.slonigiraf.org/'
license = 'Unlicense'
name = 'pallet-insurance'
repository = 'https://github.com/slonigiraf/substrate-pallet-insurance/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
